<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.spykins.locationtracker.ui.registrationView.RegisterLocationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/form_label_margin_top"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/form_label_left_margin"
                android:layout_marginRight="@dimen/form_label_right_margin"
                android:id="@+id/addressLabel"
                android:text="@string/address_label"/>
            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/addressEditText"
                android:layout_height="wrap_content"
                android:hint="@string/address_edit_hint"/>
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/form_label_left_margin"
                    android:layout_marginRight="@dimen/form_label_right_margin"
                    android:id="@+id/latitudeLabel"
                    android:text="@string/longitude_label"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:id="@+id/longitudeEditText"
                    android:layout_height="wrap_content"
                    android:hint="@string/longitude_edit_hint"/>
            </LinearLayout>


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/form_label_left_margin"
                        android:layout_marginRight="@dimen/form_label_right_margin"
                        android:id="@+id/longitudeLabel"
                        android:text="@string/latitude_label"/>
                    <EditText
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:id="@+id/latitudeEditText"
                        android:layout_height="wrap_content"
                        android:hint="@string/latitude_edit_hint"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/form_label_left_margin"
            android:layout_marginRight="@dimen/form_label_right_margin"
            android:layout_gravity="center_horizontal"
            android:id="@+id/textViewLocationError"
            android:visibility="gone"
            android:textColor="@color/colorAccent"
            android:onClick="errorTexViewClicked"
            android:text="@string/the_cordinate_is_empty_click_to_fetch" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_location_button"
                android:onClick="registerButtonClicked"
                android:id="@+id/submitValue"/>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
