<resources>
    <string name="app_name">LocationTracker</string>
    <string name="register_location">Register Location</string>
    <string name="view_saved_location">View Saved Location</string>
    <string name="address_label">Address</string>
    <string name="address_edit_hint">Enter the address of the location</string>
    <string name="longitude_label">Longitude</string>
    <string name="longitude_edit_hint">Enter the Longitude of the location</string>
    <string name="latitude_label">Latitude</string>
    <string name="latitude_edit_hint">Enter the Latitude of the location</string>
    <string name="register_location_button">Register Location</string>
    <string name="the_cordinate_is_empty_click_to_fetch">The cordinate is empty, click to fetch
    </string>
    <string name="address_is_empty">Enter the Address, it is empty</string>
    <string name="location_is_empty">location field is empty or not a number, click here to generate location
    </string>
    <string name="error_unknown">Error with the input, try again</string>
    <string name="error_location">Error fetching location, turn on Location and tap again</string>
    <string name="time_spent">Time Spent :</string>
    <string name="list_is_empty">List is empty</string>
    <string name="alart_location_request_message">Click yes to request location</string>
    <string name="alarm_location_yes">Yes</string>
    <string name="alarm_location_no">No</string>
    <string name="alarm_location_request_title">Location access required to use this App</string>
</resources>
